# AgenticWorkflow

./: .gitignore  Cargo.toml  README.md
notes/: General.md  StandaloneExamples.html  testing.html
notes/Copywriter/: Archetypes.html  Primitives.html  Toolkit.html  general-copywriter.html  marketing-copywriter.html
notes/JsonPipelines/: basics.html  others.html  schema-1.json
notes/MacroTags/: CONTEXT.md  PROVISION.md
notes/Preliminary/: BaseFormat.md  ConceptualFoundation.md  ControlApiSpecification.v0.md  ControlApiSpecification.v1.md  ControlApiSpecification.v2.md  ControlApiSpecification.v3.md  DSLReference.md  IterateSemantics.md  PageMLDesignSpecification.md
scripts/: format.liquid  format.sh
super-ai-client/: Cargo.toml
super-ai-client/src/: client.rs  lib.rs  log.rs  request.rs
super-ai-client/src/response/: batch.rs  mod.rs  streaming.rs
super-html-ast/: Cargo.toml
super-html-ast/src/: lib.rs
xml-ai/: Cargo.toml
xml-ai-core/: Cargo.toml
xml-ai-core/src/: ast.rs  lib.rs  parser.rs  runtime.rs  snapshot.rs
xml-ai-core/src/ast/: breakpoint.rs  document.rs  message.rs  message_text.rs  prompt.rs  set.rs
xml-ai-core/src/common/: breakpoint.rs  message.rs  mod.rs  prompt.rs
xml-ai/src/: cli.rs  main.rs
