[package]
name = "super-ai-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = { version = "0.3", features = [ "default" ] }
bytes = "1.0"
# scraper = "0.18.1"
# liquid = "0.26.4"
# unindent = "0.2.3"
colored = "2.1.0"
# base64 = "0.22.0"
