[package]
name = "xml-ai-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
toml = "0.8.22"

super-html-ast = { path = "../super-html-ast" }
super-ai-client = { path = "../super-ai-client" }
