[package]
name = "xml-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
toml = "0.8.22"
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }

# —— LOCAL ————————————————————————————————————————————————————————————————————
super-html-ast = { path = "../super-html-ast" }
xml-ai-core = { path = "../xml-ai-core" }
